[package]
name = "nft-issue-transaction"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.10"
log = "0.4"
toml = "0.7"
anyhow = "1.0"
thiserror = "1.0"

serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
secp256k1 = { version = "0.27", features = ["recovery"] }

tokio = { version = "1.0", features = ["full"] }
poem = "1.3.6"
poem-openapi = {version = "1.2.53", features = ["swagger-ui"]}

attohttpc = { version = "0.25", default-features = false, features = ["compress", "json", "tls-rustls"] }

ethers = "2.0"
web3 = "0.19"

finutils = { git = "https://github.com/FindoraNetwork/platform",  branch = "main" }
ledger = { git = "https://github.com/FindoraNetwork/platform",  branch = "main" }
globutils = { git = "https://github.com/FindoraNetwork/platform-lib-utils", tag = "v1.0.0" }
zei = { git = "https://github.com/FindoraNetwork/zei", branch = "stable-main" }

[build-dependencies] 
ruc = "3.0.4"
vergen = "7.5.1"
